--- a/Source/NServiceBus.Unicast.Transport.RabbitMQ/NServiceBus.Unicast.Transport.RabbitMQ.csproj
+++ b/Source/NServiceBus.Unicast.Transport.RabbitMQ/NServiceBus.Unicast.Transport.RabbitMQ.csproj
@@ -35,13 +35,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libraries\Logging\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="NServiceBus, Version=2.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
+    <Reference Include="NServiceBus, Version=2.0.0.922, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libraries\NServiceBus\NServiceBus.dll</HintPath>
+      <HintPath>..\..\..\espv3Demo\lib\nservicebus-2.0.0.922\NServiceBus.dll</HintPath>
     </Reference>
-    <Reference Include="NServiceBus.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
+    <Reference Include="NServiceBus.Core, Version=2.0.0.922, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libraries\NServiceBus\NServiceBus.Core.dll</HintPath>
+      <HintPath>..\..\..\espv3Demo\lib\nservicebus-2.0.0.922\NServiceBus.Core.dll</HintPath>
     </Reference>
     <Reference Include="RabbitMQ.Client, Version=1.6.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
